update list friend user
